# Atlas-Scientific-Probe-Library

./: .pylintrc  README.md  ftdi.py  pyproject.toml
.github/workflows/: codeql.yml  pylint.yml
atlasscientific/ftdi/: atlasdevice.py  phprobe.py
ftdi/: atlas-device.py  atlasdevice.py  phprobe.py
tests/: test_phprobe.py
