[project]
name = "atlasscientific"
version = "0.0.1"
authors = [
    {name = "Atlas Scientific"},
    {name = "Sean Deaton"}
]
description = "Atlas Scientific probe implementations."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["science", "measurement", "probe", "ph", "temperature"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "pylibftdi"
]

[project.urls]
"Homepage" = "https://github.com/WhatTheFuzz/Atlas-Scientific-Probe-Library"
